# conda-forge-only

./: .bandit  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  README.rst  pyproject.toml  test.yaml
.github/workflows/: ci.yml  deploy-sdist.yml  publish.yml  test.yml
conda_forge_only/: __init__.py  check.py  check_channels.py  cli.py
conda_forge_only/tests/: __init__.py  test_check.py  test_check_channels.py
