[project]
name = "conda-forge-only"
description = "A pre-commit hook to make sure that only the 'conda-forge' channel is used in conda environment files."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.7"
dependencies = [
    "pyyaml",
    "click"
]
dynamic = ["version"]

[project.scripts]
conda-forge-only = "conda_forge_only.cli:cli"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["conda_forge_only"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "conda_forge_only/version.py"

[tool.coverage.run]
relative_files = true
omit = ["conda_forge_only/version.py"]
