[project]
name = "conda-forge-only"
readme = "README.md"
description = "A pre-commit hook to check that conda environment files use conda-forge only."
authors = [{ name = "conda-forge-only developers", email = "stephan.finkensieper@dwd.de" }]
requires-python = ">=3.7"
dependencies = [
    "pyyaml",
    "click"
]
dynamic = ["version"]

[project.scripts]
conda-forge-only = "conda_forge_only.cli:cli"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["conda_forge_only"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "conda_forge_only/version.py"

[tool.coverage.run]
relative_files = true
omit = ["conda_forge_only/version.py"]

[tool.isort]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
profile = "black"
skip_gitignore = true
default_section = "THIRDPARTY"
known_first_party = "conda_forge_only"
line_length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
# In the future, add "B", "S", "N"
select = ["A", "D", "E", "W", "F", "I", "PT", "TID", "C90", "Q", "T10", "T20", "NPY"]

[tool.ruff.lint.per-file-ignores]
"conda_forge_only/tests/*" = ["S101"]  # assert allowed in tests

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
